Fix chip wrap direction

--- a/entrypoint/Pages/Index.cshtml.css
+++ b/entrypoint/Pages/Index.cshtml.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
 }
 
 .recipe-list-text {
